// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/docker/package getPackageUpdates adds digest 1`] = `
Array [
  Object {
    "newDigest": "sha256:one",
    "newDigestShort": "one",
    "newFrom": "some-dep:1.0.0-something@sha256:one",
    "newTag": "1.0.0-something",
    "newValue": "one",
    "type": "pin",
  },
  Object {
    "newDepTag": "some-dep:1.1.0-something",
    "newDigest": "sha256:two",
    "newFrom": "some-dep:1.1.0-something@sha256:two",
    "newMajor": "1",
    "newTag": "1.1.0-something",
    "newValue": "1.1.0",
    "type": "minor",
  },
]
`;

exports[`lib/manager/docker/package getPackageUpdates ignores unstable upgrades 1`] = `
Array [
  Object {
    "newDepTag": "node:8",
    "newFrom": "node:8",
    "newMajor": "8",
    "newTag": "8",
    "newValue": "8",
    "type": "major",
  },
]
`;

exports[`lib/manager/docker/package getPackageUpdates returns a digest when registry is present 1`] = `
Array [
  Object {
    "newDigest": "sha256:1234567890",
    "newDigestShort": "123456",
    "newFrom": "docker.io/some-dep:1.0.0@sha256:1234567890",
    "newTag": "1.0.0",
    "newValue": "123456",
    "type": "digest",
  },
]
`;

exports[`lib/manager/docker/package getPackageUpdates returns major and minor upgrades 1`] = `
Array [
  Object {
    "newDepTag": "some-dep:1.2.0",
    "newDigest": "sha256:one",
    "newFrom": "some-dep:1.2.0@sha256:one",
    "newMajor": "1",
    "newTag": "1.2.0",
    "newValue": "1.2.0",
    "type": "minor",
  },
  Object {
    "newDepTag": "some-dep:2.0.0",
    "newDigest": "sha256:two",
    "newFrom": "some-dep:2.0.0@sha256:two",
    "newMajor": "2",
    "newTag": "2.0.0",
    "newValue": "2.0.0",
    "type": "major",
  },
  Object {
    "newDepTag": "some-dep:3.0.0",
    "newDigest": "sha256:three",
    "newFrom": "some-dep:3.0.0@sha256:three",
    "newMajor": "3",
    "newTag": "3.0.0",
    "newValue": "3.0.0",
    "type": "major",
  },
]
`;

exports[`lib/manager/docker/package getPackageUpdates returns only one major 1`] = `
Array [
  Object {
    "newDepTag": "some-dep:1.2.0",
    "newDigest": "sha256:one",
    "newFrom": "some-dep:1.2.0@sha256:one",
    "newMajor": "1",
    "newTag": "1.2.0",
    "newValue": "1.2.0",
    "type": "minor",
  },
  Object {
    "newDepTag": "some-dep:3.0.0",
    "newDigest": "sha256:two",
    "newFrom": "some-dep:3.0.0@sha256:two",
    "newMajor": "3",
    "newTag": "3.0.0",
    "newValue": "3.0.0",
    "type": "major",
  },
]
`;

exports[`lib/manager/docker/package getPackageUpdates returns only one upgrade 1`] = `
Array [
  Object {
    "newDepTag": "some-dep:3.0.0",
    "newDigest": "sha256:one",
    "newFrom": "some-dep:3.0.0@sha256:one",
    "newMajor": "3",
    "newTag": "3.0.0",
    "newValue": "3.0.0",
    "type": "major",
  },
]
`;

exports[`lib/manager/docker/package getPackageUpdates returns only one upgrade if automerging major 1`] = `
Array [
  Object {
    "newDepTag": "some-dep:3.0.0",
    "newDigest": "sha256:one",
    "newFrom": "docker.io/some-dep:3.0.0@sha256:one",
    "newMajor": "3",
    "newTag": "3.0.0",
    "newValue": "3.0.0",
    "type": "major",
  },
]
`;

exports[`lib/manager/docker/package getPackageUpdates upgrades from unstable to stable 1`] = `
Array [
  Object {
    "newDepTag": "node:8",
    "newFrom": "node:8",
    "newMajor": "8",
    "newTag": "8",
    "newValue": "8",
    "type": "major",
  },
]
`;

exports[`lib/manager/docker/package getPackageUpdates upgrades from unstable to unstable if not ignoring 1`] = `
Array [
  Object {
    "newDepTag": "node:9",
    "newFrom": "node:9",
    "newMajor": "9",
    "newTag": "9",
    "newValue": "9",
    "type": "major",
  },
]
`;
